add dockerfile, add frontend submodule, fix router and docs
