# services/domain_change.go
@@ -13,9 +13,9 @@ import (
 // @Summary list all domain change requests generated by the user
 // @Tags domain
 // @Produce json
-// @Success 200 {object} mw.Domain
+// @Success 200 {object} mw.Domain{data=[]models.DomainChange}
 // @Failure 500 {object} mw.Domain
-// @Router /domain/change/myapply [get]
+// @Router /api/v1/domain/change/myapply [get]
 func DomainChangeListMyApply(c *fiber.Ctx) error {
 	// extract info
 	uid := c.Locals("uid").(string)
@@ -39,9 +39,9 @@ func DomainChangeListMyApply(c *fiber.Ctx) error {
 // @Summary list all domain change requests that the user can approve
 // @Tags domain
 // @Produce json
-// @Success 200 {object} mw.Domain
+// @Success 200 {object} mw.Domain{data=[]models.DomainChange}
 // @Failure 500 {object} mw.Domain
-// @Router /domain/change/myapprove [get]
+// @Router /api/v1/domain/change/myapprove [get]
 func DomainChangeListMyApprove(c *fiber.Ctx) error {
 	// extract info
 	uid := c.Locals("uid").(string)
@@ -70,9 +70,9 @@ func DomainChangeListMyApprove(c *fiber.Ctx) error {
 // @Produce json
 // @Param id path string true "domain change id"
 // @Param opt query string true "operation: accept or reject"
-// @Success 200 {object} mw.Domain
+// @Success 200 {object} mw.Domain{data=models.DomainChange}
 // @Failure 500 {object} mw.Domain
-// @Router /domain/change/{id} [put]
+// @Router /api/v1/domain/change/{id} [put]
 func DomainChangeCheck(c *fiber.Ctx) error {
 	// extract info
 	uid := c.Locals("uid").(string)
